# self-supervised-learning-assignment

./: .gitignore  README.md  analysis_guide.md  check_csv.ipynb  check_csv.py  check_dist.py  chunk_analysis.py  data_analysis.py  data_eng.py  data_splitting.py  data_structure.txt  jp_nb.py  pre-train-bert(2).ipynb  pre-train-bert_cv.ipynb  pre-train-bert_no_cv(1).ipynb  pre-train-bert_no_cv.ipynb  pre_train_model.py  pyproject.toml  remove_copies.py  supervised_fine_tuning.py  test_models.py  train_classifier_no_pre_train.ipynb  train_classifiers_pre_train.ipynb
data/processed/: column_distributions.json  corpus_statistics.csv  source_file_distribution.json  text_column_distributions.json
data/processed/splits/: test.csv
