[project]
name = "self-supervised-learning-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bing-image-downloader>=1.1.2",
    "ipykernel>=6.29.5",
    "langchain>=0.3.7",
    "matplotlib>=3.9.2",
    "modal>=0.66.36",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
]
